project/phase2/test/test_2_r03.spl
struct Student
{
    int weight;
    float weight;
};
int test_2_r07()
{
    struct Student amy;
    int age;
    float age;
    return 0;
}
